--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Aayush Rana</span></p>
-                        <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Photographer</span></p>
                         <p><span class="title-s">Email: </span> <span>ranaaayush19@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(214) 499-1740</span></p>
                       </div>
